--- a/Project.toml
+++ b/Project.toml
@@ -4,4 +4,6 @@ authors = ["Geth, Frederik (Energy, Newcastle) <Frederik.Geth@csiro.au>"]
 version = "0.1.0"
 
 [deps]
+Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 OpenDSSDirect = "a8b11937-1041-50f2-9818-136bb7a8fb06"
+PowerModelsDistribution = "d7431456-977f-11e9-2de3-97ff7677985e"
