--- a/Project.toml
+++ b/Project.toml
@@ -6,4 +6,5 @@ version = "0.1.0"
 [deps]
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 OpenDSSDirect = "a8b11937-1041-50f2-9818-136bb7a8fb06"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PowerModelsDistribution = "d7431456-977f-11e9-2de3-97ff7677985e"
