--- a/Project.toml
+++ b/Project.toml
@@ -9,4 +9,5 @@ Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 OpenDSSDirect = "a8b11937-1041-50f2-9818-136bb7a8fb06"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PowerModelsDistribution = "d7431456-977f-11e9-2de3-97ff7677985e"
+StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
