--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Geth, Frederik (Energy, Newcastle) <Frederik.Geth@csiro.au>"]
 version = "0.1.0"
 
 [deps]
+ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 OpenDSSDirect = "a8b11937-1041-50f2-9818-136bb7a8fb06"
