--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
+MadNLP = "2621e9c9-9eb4-46b1-8089-e8c72242dfb6"
 OpenDSSDirect = "a8b11937-1041-50f2-9818-136bb7a8fb06"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PowerModelsDistribution = "d7431456-977f-11e9-2de3-97ff7677985e"
