--- a/script/Project.toml
+++ b/script/Project.toml
@@ -6,4 +6,6 @@ OpenDSSDirect = "a8b11937-1041-50f2-9818-136bb7a8fb06"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 PowerModelsDistribution = "d7431456-977f-11e9-2de3-97ff7677985e"
+RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
 RepresentativeLVNetworks = "eae880fa-0a1c-414a-9d83-903875671fcc"
+StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
