--- a/script/Project.toml
+++ b/script/Project.toml
@@ -1,11 +1,15 @@
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 MadNLP = "2621e9c9-9eb4-46b1-8089-e8c72242dfb6"
 OpenDSSDirect = "a8b11937-1041-50f2-9818-136bb7a8fb06"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
+PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 PowerModelsDistribution = "d7431456-977f-11e9-2de3-97ff7677985e"
 RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
 RepresentativeLVNetworks = "eae880fa-0a1c-414a-9d83-903875671fcc"
+UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
