--- a/Project.toml
+++ b/Project.toml
@@ -6,8 +6,11 @@ version = "0.1.0"
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+LicenseCheck = "726dbf0d-6eb6-41af-b36c-cd770e0f00cc"
+LicenseGrabber = "ff1fe538-7f12-4e61-92e8-8b99bd5f2913"
 Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 OpenDSSDirect = "a8b11937-1041-50f2-9818-136bb7a8fb06"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
