--- a/python-reader/pyproject.toml
+++ b/python-reader/pyproject.toml
@@ -27,6 +27,7 @@ scipy = "^1.8.0"
 pyppeteer = "^1.0.2"
 pyvis = "^0.1.9"
 pyarrow = "^7.0.0"
+pre-commit = "^2.17.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.3"
