--- a/python-reader/.pre-commit-config.yaml
+++ b/python-reader/.pre-commit-config.yaml
@@ -1,5 +1,6 @@
-# git config --global init.templateDir ~/.git-template
-# pre-commit init-templatedir ~/.git-template
+# To enable pre-commit hooks:
+# git config --global init.templateDir .git-template
+# pre-commit init-templatedir .git-template
 #
 repos:
 -   repo: https://github.com/pre-commit/mirrors-autopep8
