--- a/python-reader/pyproject.toml
+++ b/python-reader/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.poetry]
 name = "lvft-reader"
 version = "0.0.1"
-description = "Exmaple code for reading the Low Voltage Feeder Taxonomy representative network DSS files using Ditto"
+description = "Example code for reading the Low Voltage Feeder Taxonomy representative network DSS files using Ditto"
 authors = ["Sam West <sam.west@csiro.au>"]
-
+copyright = "Copyright 2021 CSIRO"
 
 packages = [
     { include = "lvft_reader/**/*", from="src" },   # need to specify this if it doesn't match the project name
@@ -41,7 +41,6 @@ pylint = "^2.11.1"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
-
 
 [tool.autopep8]
 max-line-length = 200
