--- a/.github/workflows/poetry-tests.yml
+++ b/.github/workflows/poetry-tests.yml
@@ -7,15 +7,8 @@ on: [ push, workflow_dispatch ]
 
 
 env:
-  # Make sure these secrets are set in this git repo or organisation settings:
-
-  # Private package index credentials, for installing and publishing to the private pypi index (see readme)
-  PUBLISH_URL: ${{secrets.PRIVATE_PYPI_PUBLISH_URL}}
-  PUBLISH_USER: ${{secrets.PRIVATE_PYPI_PUBLISH_USER}}
-  PUBLISH_PASSWORD: ${{secrets.PRIVATE_PYPI_PUBLISH_PASSWORD}}
-
   PYTHON_VERSION: 3.9.13
-  POETRY_VERSION: 1.1.14
+  POETRY_VERSION: 1.2.1
 
 jobs:
   test:
@@ -23,7 +16,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest, windows-latest ] # macOS-latest - disabled by default because it's charged at 10x the cost
+        os: [ ubuntu-latest, windows-latest, macOS-latest] # macOS-latest disabled by default because it's charged at 10x the cost
+
+    defaults:
+      run:
+        working-directory: ./python-reader
 
     steps:
       # check-out repo and set-up python
@@ -60,13 +57,6 @@ jobs:
           path: .venv
           key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
 
-      # Adds private package index URL and credentials to the poetry config, for installing from and publishing to the private package index.
-      - name: Add Private Package Index
-        if: "${{ env.PUBLISH_URL != '' }}"
-        run: |
-          poetry config repositories.csiroenergy ${{env.PUBLISH_URL}}
-          poetry config http-basic.csiroenergy ${{env.PUBLISH_USER}} ${{env.PUBLISH_PASSWORD}} 
-
       # install dependencies if cache does not exist
       - name: Install dependencies
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true' || runner.os == 'Windows' # install if cache miss or on windows (never caches)
@@ -84,7 +74,7 @@ jobs:
         if: runner.os == 'Windows'
         run: |
           poetry run pre-commit run --color never
-          poetry run scripts\test.cmd
+          poetry run pytest
       
           
 
