--- a/.github/workflows/poetry-tests.yml
+++ b/.github/workflows/poetry-tests.yml
@@ -60,14 +60,14 @@ jobs:
       # install dependencies if cache does not exist
       - name: Install dependencies
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true' || runner.os == 'Windows' # install if cache miss or on windows (never caches)
-        run: poetry install --no-interaction --no-root --remove-untracked
+        run: poetry install --no-interaction --no-root --sync
 
       # run test suite
       - name: Run tests (linux/mac)
         if: runner.os != 'Windows'
         run: |
           poetry run pre-commit run --color never
-          poetry run scripts/test.sh
+          poetry run pytest
 
       # run test suite
       - name: Run tests (windows)
